# cli

./: CMakeLists.txt  README.md  cli.cpp
example/: CMakeLists.txt  cities.txt  main.cpp
lib/: CMakeLists.txt
lib/inc/: Menu.hpp  MenuEntity.hpp  Prompt.hpp
lib/src/: Menu.cpp  MenuEntity.cpp  Prompt.cpp
src/: Prompt.cpp  Prompt.hpp  cities.txt  main.cpp
